@@ -29,6 +29,7 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 
+import com.oracle.svm.core.option.OptionOrigin;
 import com.oracle.svm.driver.NativeImage.ArgumentQueue;
 import com.oracle.svm.util.LogUtils;
 
@@ -45,6 +46,8 @@ class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
 
     /* Defunct legacy options that we have to accept to maintain backward compatibility */
     private static final String noServerOption = "--no-server";
+
+    private static final String nativeAccessOption = "--enable-native-access";
 
     DefaultOptionHandler(NativeImage nativeImage) {
         super(nativeImage);
@@ -82,9 +85,9 @@ class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
                 }
                 String[] mainClassModuleArgParts = mainClassModuleArg.split("/", 2);
                 if (mainClassModuleArgParts.length > 1) {
-                    nativeImage.addPlainImageBuilderArg(nativeImage.oHClass + mainClassModuleArgParts[1]);
+                    nativeImage.addPlainImageBuilderArg(NativeImage.injectHostedOptionOrigin(nativeImage.oHClass + mainClassModuleArgParts[1], OptionOrigin.originDriver));
                 }
-                nativeImage.addPlainImageBuilderArg(nativeImage.oHModule + mainClassModuleArgParts[0]);
+                nativeImage.addPlainImageBuilderArg(NativeImage.injectHostedOptionOrigin(nativeImage.oHModule + mainClassModuleArgParts[0], OptionOrigin.originDriver));
                 nativeImage.setModuleOptionMode(true);
                 return true;
             case addModulesOption:
@@ -126,6 +129,15 @@ class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
             case "--enable-preview":
                 args.poll();
                 nativeImage.addCustomJavaArgs("--enable-preview");
+                nativeImage.enablePreview();
+                return true;
+            case nativeAccessOption:
+                args.poll();
+                String modules = args.poll();
+                if (modules == null) {
+                    NativeImage.showError(nativeAccessOption + moduleSetModifierOptionErrorMessage);
+                }
+                nativeImage.addCustomJavaArgs(nativeAccessOption + "=" + modules);
                 return true;
         }
 
@@ -198,6 +210,15 @@ class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
                 NativeImage.showError(headArg + moduleSetModifierOptionErrorMessage);
             }
             nativeImage.addLimitedModules(limitModulesArgs);
+            return true;
+        }
+        if (headArg.startsWith(nativeAccessOption + "=")) {
+            args.poll();
+            String nativeAccessModules = headArg.substring(nativeAccessOption.length() + 1);
+            if (nativeAccessModules.isEmpty()) {
+                NativeImage.showError(headArg + moduleSetModifierOptionErrorMessage);
+            }
+            nativeImage.addCustomJavaArgs(headArg);
             return true;
         }
         return false;
